fixing spacing and background for real this time

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ p{
 body, html {
   margin: 0;
   padding:0;
+  height:100%;
 }
 
 hr{
@@ -34,7 +35,6 @@ h2{
   text-align: left;
   margin-top: 0.25em;
   margin-bottom: 0.5em;
-
 }
 
 button{
@@ -78,22 +78,18 @@ input{
 
 #background{
   background-color: #003366;
-  position: absolute;
   top: 70px;
   bottom: 0px;
   width: 100%;
-  height:100%;
-  z-index:100;
 }
 
 #form{
-  margin-top:2px;
   background-color: white;
   display:block;
   margin-right:auto;
   margin-left: auto;
   width: 70%;
-  height: inherit;
+  height: auto;
 }
 
 .title_card{
@@ -105,7 +101,7 @@ input{
 }
 
 #last_block{
-  padding: 4em 5em;
+  padding: 3em 5em 4.5em 5em;
   height:auto;
 }
 
@@ -122,6 +118,12 @@ input{
   width:50%;
   height: auto;
   display: inline-block;
+}
+
+.hr_2{
+  height: 4px;
+  border-top: 4px solid #003366;
+  margin: 0;
 }
 
 @media only screen and (max-width: 768px){
